--- a/index.html
+++ b/index.html
@@ -19,23 +19,23 @@
                 <img class="profile" src="ak.png">
             </div>
             <div class="col-lg-10" id="head">
-                <h2 style="font-size: 45px;font-weight: bolder;color: #301392" >AMIT KUMAR</h2>
-                <h6 style="text-decoration: underline #301392" >Website Developer & IT Engineer</h6>
+                <h2 style="font-size: 45px;font-weight: bolder;color: #210b69" >AMIT KUMAR</h2>
+                <h6 style="text-decoration: underline #210b69" >Website Developer & IT Engineer</h6>
                 <p>An IT Engineer with quite good experience with Website Development and latest Technological Platforms. </p>
             </div>
         </div>
         <div class="row" >
             <div class="col-lg-2" >
-                <i class="fas fa-envelope fa-lg" style="color: #301392;"></i><br>
+                <i class="fas fa-envelope fa-lg" style="color: #210b69;"></i><br>
                 <p>amitk6228@gmail.com</p>
-                <i class="fas fa-mobile-alt fa-lg " style="color: #301392;"></i><br>
+                <i class="fas fa-mobile-alt fa-lg " style="color: #210b69;"></i><br>
                 <p>9549289322</p>
-                <i class="fas fa-map-marker-alt" style="color: #301392;"></i><br>
+                <i class="fas fa-map-marker-alt" style="color: #210b69;"></i><br>
                 <p>New Delhi,India</p>
-                <i class="fab fa-google fa-lg" style="color: #301392;"></i><br>
+                <i class="fab fa-google fa-lg" style="color: #210b69;"></i><br>
                 <p style="text-align: justify"><a href="https://itsaamyth.github.io/Amitkumar/" style="color: black;">itsaamyth.github.io<br>/AmitKumar/ </a></p>
 
-                <h2 style="font-size: 20px;font-weight: bolder;border-bottom: 2px solid #301392;color: #301392;">SKILLS</h2>
+                <h2 style="font-size: 20px;font-weight: bolder;border-bottom: 2px solid #210b69;color: #210b69;">SKILLS</h2>
                 <button style="cursor:default;" class="skill">Javascript</button> &nbsp;&nbsp;<button style="cursor:default;" class="skill">C</button>
                 <button style="cursor:default;" class="skill">NodeJS</button>&nbsp;&nbsp;<button style="cursor:default;" class="skill">Python</button>
                 <button style="cursor:default;" class="skill">MongoDB</button>&nbsp;&nbsp;<button style="cursor:default;" class="skill">Mysql</button>
@@ -43,43 +43,43 @@
                 <button style="cursor:default;" class="skill">Html</button> &nbsp;&nbsp; <button style="cursor:default;" class="skill">CSS</button>
                 <button style="cursor:default;" class="skill">Github</button>&nbsp;<button style="cursor:default;" class="skill">Bootstrap</button>
 
-                <h2 style="font-size: 20px;font-weight: bolder;border-bottom: 2px solid #301392;margin-top: 20px;color: #301392;">LANGUAGES</h2>
+                <h2 style="font-size: 20px;font-weight: bolder;border-bottom: 2px solid #210b69;margin-top: 20px;color: #210b69;">LANGUAGES</h2>
                 <h6>Engligh</h6>
-                <p style="font-size: 12px;margin-top: -5px;color: #301392;"><i>Full Professional Proficiency</i></p>
+                <p style="font-size: 12px;margin-top: -5px;color: #210b69;"><i>Full Professional Proficiency</i></p>
                 <h6 style="margin-top: -5px;">Hindi</h6>
-                <p style="margin-top: -5px;font-size: 12px;color: #301392;"><i>Native Proficiency</i></p>
+                <p style="margin-top: -5px;font-size: 12px;color: #210b69;"><i>Native Proficiency</i></p>
 
-                <h2 style="font-size: 20px;font-weight: bolder;border-bottom: 2px solid #301392;color: #301392;">INTERESTS</h2>
+                <h2 style="font-size: 20px;font-weight: bolder;border-bottom: 2px solid #210b69;color: #210b69;">INTERESTS</h2>
                 <button style="cursor:default;" class="interest">Front-End Designing</button><br>
                 <button style="cursor:default;" class="interest">Travelling</button>&nbsp; <button style="cursor:default;" class="interest">Trekking</button>
                 <button style="cursor:default;" class="interest">Basketball</button>&nbsp;<button style="cursor:default;" class="interest">Cricket</button>
 
             </div>
             <div class="col-lg-10" >
-                <h2 style="font-size: 20px;font-weight: bolder;border-bottom: 2px solid #301392;color: #301392;">EDUCATION</h2>
-                <h6 style="color: #301392;">Bachelor of Technology in Information Technology</h6>
+                <h2 style="font-size: 20px;font-weight: bolder;border-bottom: 2px solid #210b69;color: #210b69;">EDUCATION</h2>
+                <h6 style="color: #210b69;">Bachelor of Technology in Information Technology</h6>
                 <p>Greater Noida Institute of Technology ( AKTU ) , <i>UP/INDIA</i></p>
                 <p style="margin-top: -10px;"><i>03/2018 - 03/2020</i></p>
-                <h6 style="color: #301392;">Schooling</h6>
+                <h6 style="color: #210b69;">Schooling</h6>
                 <p>St.John's School , <i>New Delhi/INDIA</i></p>
                 <p style="margin-top: -10px;"><i>03/2018</i></p>
 
-                <h2 style="font-size: 20px;font-weight: bolder;border-bottom: 2px solid #301392;color: #301392;">WORK EXPERIENCE</h2>
-                <h6 style="color: #301392;">Anureza Power Projects Limited</h6>
+                <h2 style="font-size: 20px;font-weight: bolder;border-bottom: 2px solid #210b69;color: #210b69;">WORK EXPERIENCE</h2>
+                <h6 style="color: #210b69;">Anureza Power Projects Limited</h6>
                 <p style="margin-top: -8px;font-size: 12px;"><i>03/2020 - 05/2020</i></p>
-                <p style="margin-top: -10px;font-size: 12px;color: #301392;"><i>Achievements/Task</i></p>
+                <p style="margin-top: -10px;font-size: 12px;color: #210b69;"><i>Achievements/Task</i></p>
                 <p style="margin-top: -20px;font-size: 15px;"><ul><li>Company's Website Designing and Development from scratch</li></ul></p>
-                <h6 style="color: #301392;">Kyrion Technologies</h6>
+                <h6 style="color: #210b69;">Kyrion Technologies</h6>
                 <p style="margin-top: -8px;font-size: 12px;"><i>03/2020 - 05/2020</i></p>
-                <p style="margin-top: -10px;font-size: 12px;color: #301392"><i>Achievements/Task</i></p>
+                <p style="margin-top: -10px;font-size: 12px;color: #210b69"><i>Achievements/Task</i></p>
                 <p style="margin-top: -20px;font-size: 15px;"><ul><li>Introduction to Software Devlopment field using JAVA Programming</li></ul></p>
                 
-                <h2 style="font-size: 20px;font-weight: bolder;border-bottom: 2px solid #301392;color: #301392;">CERTIFICATES</h2>
+                <h2 style="font-size: 20px;font-weight: bolder;border-bottom: 2px solid #210b69;color: #210b69;">CERTIFICATES</h2>
                 <p>Website Development using NodeJs at Coding Blocks (02/2020 – 06/2020)</p><br>
                 <p style="margin-top: -35px">Data Science using Python at Coding Blocks (05/2019 – 08/2019)</p><br>
                 <p style="margin-top: -35px">Microsoft Technology Associate - Introduction to Programming using JAVA (03/2019)</p>
 
-                <h2 style="font-size: 20px;font-weight: bolder;border-bottom: 2px solid #301392;color: #301392;">PERSONAL PROJECTS</h2>
+                <h2 style="font-size: 20px;font-weight: bolder;border-bottom: 2px solid #210b69;color: #210b69;">PERSONAL PROJECTS</h2>
                 <h6 style="font-size: 18px;">Website made using NodeJs (04/2020 – 05/2020)</h6><br>
                 <ul style="margin-top: -30px;font-size: 15px;"><li>Website made from scratch using NodeJS - ExpressJS - MongoDB</li></ul>
                 <h6 style="margin-top: -10px;font-size: 18px;">SocketIO Based chatroom application (05/2020 – 06/2020)</h6><br>
@@ -91,7 +91,7 @@
                 <h6 style="margin-top: -10px;font-size: 18px;">Telegram Bot (06/2020 – Present)</h6><br>
                 <ul style="margin-top: -30px;font-size: 15px;"><li> Telegram Bot using Python-Telegram-Bot and Flask</li></ul>
 
-                <h2 style="font-size: 20px;font-weight: bolder;border-bottom: 2px solid #301392;color: #301392;">ACHIEVEMENTS</h2>
+                <h2 style="font-size: 20px;font-weight: bolder;border-bottom: 2px solid #210b69;color: #210b69;">ACHIEVEMENTS</h2>
                 <h6>Microsoft Technology Associate: Introduction to Programming Using Java - Certified
                     2019 (03/2019)</h6><br>   
             </div>
